--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                             <label class="label">
                               <span class="label-text">Email</span>
                             </label>
-                            <input type="email" placeholder="Enter Your Email" class="input input-bordered" required />
+                            <input id="phone-number" type="text" placeholder="Enter Your phone number" class="input input-bordered" required />
                           </div>
                           <div class="form-control">
                             <label class="label">
-                              <span class="label-text">Password</span>
+                              <span class="label-text">Pin</span>
                             </label>
-                            <input type="password" placeholder="Enter Your Password" class="input input-bordered" required />
+                            <input type="password" placeholder="Enter Your Pin" class="input input-bordered" required />
                             <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                             </label>
                           </div>
                           <div class="form-control mt-6">
-                            <button class="btn btn-primary">Login</button>
+                            <button id="login-button" class="btn btn-primary">Login</button>
                           </div>
                         </form>
                       </div>
@@ -44,5 +44,6 @@
             </div>
           </div>
     </main>
+    <script src="js/payoo.js"></script>
 </body>
 </html>
