--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                     <div class="stats shadow">
                         <div class="stat">
                             <div class="stat-title">Available Balance</div>
-                            <div class="stat-value">89,400</div>
+                            <div id="main-balance" class="stat-value">9500</div>
 
                         </div>
 
@@ -30,8 +30,9 @@
                         <button class="btn btn-active">Cash Out</button>
                     </div>
                     <div class="divider"></div>
+                    <!-- Cash in form  -->
                     <div>
-                        <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                        <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl hidden">
                             <form class="card-body">
                                 <div class="form-control">
                                     <label class="label">
@@ -43,8 +44,9 @@
                                     <label class="label">
                                         <span class="label-text">Pin</span>
                                     </label>
-                                    <input id="input-pin-number" type="password" placeholder="Your Pin Number" class="input input-bordered" required />
-
+                                    <input id="input-pin-number" type="password" placeholder="Your Pin Number" class="input input-bordered"
+                                        required />
+                    
                                 </div>
                                 <div class="form-control mt-6">
                                     <button id="add-money-button" class="btn btn-primary">Add Money</button>
@@ -52,6 +54,30 @@
                             </form>
                         </div>
                     </div>
+
+                    <!-- cash out form  -->
+                    <div>
+                        <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                            <form class="card-body">
+                                <div class="form-control">
+                                    <label class="label">
+                                        <span class="label-text">Amount</span>
+                                    </label>
+                                    <input id="cashout-amount" type="text" placeholder="Amount" class="input input-bordered" required />
+                                </div>
+                                <div class="form-control">
+                                    <label class="label">
+                                        <span class="label-text">Pin</span>
+                                    </label>
+                                    <input id="cashout-pin" type="password" placeholder="Your Pin Number" class="input input-bordered"
+                                        required />
+                    
+                                </div>
+                                <div class="form-control mt-6">
+                                    <button id="cashout-button" class="btn btn-primary">Cash Out</button>
+                                </div>
+                            </form>
+                        </div>
                 </div>
 
             </div>
